test/TestPhases/importchecking/invalid/importdoesnotexist.blc
import M "moduledoesnotexist"

module exposes Main

activity Main ()
    await true
end